objects/SFMC_AccessTokens__mdt.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expires_At__c</fullName>
        <label>Expires At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expires_In__c</fullName>
        <label>Expires In</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SFMC Access Tokens</label>
    <listViews>
        <fullName>Full_View</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Access_Token__c</columns>
        <columns>Expires_At__c</columns>
        <columns>Expires_In__c</columns>
        <filterScope>Everything</filterScope>
        <label>Full View</label>
    </listViews>
    <pluralLabel>SFMC Access Tokens</pluralLabel>
</CustomObject>